# ai-finance-assistant

./: .copilot-instructions.md  .coverage  .env.example  .gitignore  GOALS_API_ISOLATION_FIX.md  GOALS_PERFORMANCE_OPTIMIZATION.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE6_VERIFICATION_COMPLETE.md  README.md  SETUP.md  TESTING.md  command.txt  config.yaml  demo_agent_patterns.py  demo_rag_agent.py  demo_simple_qa.py  demo_tools.py  main.py  plan.txt  prompt.md  prompt.txt  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  simple_goals_test.py  streamlit_app.py  streamlit_app_phase2.py  test_goals_api_isolation.py  test_goals_performance.py  test_phase4.py  test_phase4_final.py  test_phase5_market.py  test_phase6_complete.py  test_phase6_goals.py  test_rag_integration.py  test_routing_fix.py
demos/: README.md  __init__.py  demo_agent_patterns.py  demo_rag_agent.py  demo_simple_qa.py  demo_tools.py
docs/: PHASE4_COMPLETE.md  PROJECT_ORGANIZATION.md  README.md  SETUP.md  prompt.md
scripts/: README.md
scripts/scrapers/: README.md  SCRAPER_README.md  common_finance_scraper.py  retirement_scraper.py  run_investing_scraper.py  run_scraper.py  test_investing_scraper.py  test_scraper.py
scripts/utils/: check_progress.py  run_tests.py  test_setup.py
scripts/vector_db/: VECTOR_DB_GUIDE.md  build_vector_db.py  setup_vector_db.py  test_vector_db.py  vector_db_examples.py
src/agents/: base_agent.py  enhanced_market_agent.py  finance_qa_agent.py  goal_agent.py  market_agent.py  portfolio_agent.py
src/core/: README.md  config.py  simple_workflow.py  state.py  workflow.py  workflow_v2.py
src/data/: faiss_index.faiss  faiss_index_docs.pkl  faiss_index_metadata.pkl  investing_scraper.py  market_data.py
src/data/knowledge_base/: investing_scraping_summary.json  retirement_scraping_summary.json
src/data/knowledge_base/articles/: finance_001_Credit_Report_Definition_Contents_and_How_to_Ge.json  finance_002_What_Is_a_Credit_Score.json  finance_003_Emergency_Fund_Uses_and_How_to_Build_Yours.json  finance_004_What_Is_a_Budget_Plus_11_Budgeting_Myths_Holding_.json  finance_006_What_Is_Homeowners_Insurance_and_How_Does_It_Work.json  finance_008_Life_Insurance_What_It_Is_How_It_Works_and_How_.json  finance_009_What_Is_a_Mortgage_Types_How_They_Work_and_Exam.json  investing_article_0001.json  investing_article_0002.json  investing_article_0003.json  investing_article_0004.json  investing_article_0005.json  investing_article_0006.json  investing_article_0007.json  investing_article_0008.json  investing_article_0009.json  investing_article_0010.json  investing_article_0011.json  investing_article_0012.json  investing_article_0013.json  investing_article_0014.json  investing_article_0015.json  investing_article_0016.json  investing_article_0017.json  investing_article_0018.json  investing_article_0019.json  investing_article_0020.json  investing_article_0021.json  investing_article_0022.json  investing_article_0023.json  investing_article_0024.json  investing_article_0025.json  investing_article_0026.json  investing_article_0027.json  retirement_002_401k_Plans_What_Are_They_How_They_Work.json  retirement_003_Traditional_IRA_vs._Roth_IRA_Which_Is_Better_for_.json  retirement_004_Individual_Retirement_Account_IRA_What_It_Is_4.json  retirement_009_Understanding_a_Traditional_IRA_vs._Other_Retireme.json  retirement_011_Simplified_Employee_Pension_SEP_IRA_What_It_Is.json  retirement_012_SIMPLE_IRA_Definition_How_Small_Businesses_Use_.json  (+1 more)
src/rag/: retriever.py  vector_store.py
src/tools/: __init__.py  market_tools.py
src/utils/: helpers.py  portfolio_calc.py
src/web_app/: chat_tab.py  goals_tab.py  main.py  market_tab.py  portfolio_tab.py
tests/: README.md  __init__.py  conftest.py  test_routing_fix.py  test_utils.py
tests/integration/: __init__.py  simple_goals_test.py  test_extraction.py  test_goals_api_isolation.py  test_rag_integration.py
tests/performance/: __init__.py  test_goals_performance.py
tests/phase_tests/: __init__.py  test_phase4.py  test_phase4_simple.py  test_phase5_market.py  test_phase6_complete.py  test_phase6_goals.py
tests/test_agents/: test_finance_qa_agent.py  test_portfolio_agent.py
tests/test_core/: test_workflow.py
tests/test_utils/: test_portfolio_calc.py
