[project]
name = "ai-finance-assistant"
version = "1.0.0"
description = "Multi-agent AI system for financial education and portfolio management"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7,<4.0"
dependencies = [
    # Just use compatible versions instead of exact pins
    "langchain>=0.1.20,<0.2.0",
    "langgraph>=0.0.20,<0.1.0",
    "openai>=1.99.0,<2.0.0",
    "streamlit>=1.48.0,<2.0.0",
    "pandas>=2.3.0,<3.0.0",
    "plotly>=5.24.0,<6.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
]

[project.scripts]
finance-assistant = "src.web_app.main:main"

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"
